--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,11 +19,13 @@
                     <li>
                         <a href="{{ site.baseurl }}/">Home</a>
                     </li>
-                    {% for page in site.pages %}{% if page.title %}
+                    <!--{% for page in site.pages %}{% if page.title %}-->
                     <li>
-                        <a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+                        <!--<a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>-->
+                        <a href="/tutorial.html">Statistics Tutorial</a>
+                        <a href="/blog.html">Chinese Blog</a>
                     </li>
-                    {% endif %}{% endfor %}
+                    <!--{% endif %}{% endfor %}-->
                 </ul>
             </div>
         </div>
