--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -16,17 +16,11 @@
         <div id="huxblog_navbar">
             <div class="navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="{{ site.baseurl }}/">Home</a>
-                    </li>
+                    <li><a href="{{ site.baseurl }}/">Home</a></li>
                     <!--{% for page in site.pages %}{% if page.title %}-->
-                    <li>
+                    <li><a href="/tutorial.html">Statistics Tutorial</a><\li>
                         <!--<a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>-->
-                        <a href="/tutorial.html">Statistics Tutorial</a>
-                    <\li>
-                    <li>
-                        <a href="/blog.html">Chinese Blog</a>
-                    </li>
+                    <li><a href="/blog.html">Chinese Blog</a></li>
                     <!--{% endif %}{% endfor %}-->
                 </ul>
             </div>
